[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Weapons/WeaponSlot.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[node name="Enemy" type="KinematicBody2D" groups=[
"Attackable",
"Enemy",
]]
script = ExtResource( 1 )
detect_radius = 40

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.353554, -7.15945 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Run = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 2 )]
position = Vector2( -8, -20 )
health = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708

[node name="Visibility" type="Area2D" parent="."]

[node name="DetectionShape" type="CollisionShape2D" parent="Visibility"]

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2147483664

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.353951, -7.31503 )

[node name="WeaponSlot" parent="." instance=ExtResource( 6 )]

[node name="Hitbox" parent="WeaponSlot" index="0"]
position = Vector2( 14, -7 )
collision_mask = 4

[node name="WeaponPosition" parent="WeaponSlot" index="2"]
position = Vector2( -3, -2 )

[node name="BloodPosition" type="Position2D" parent="."]
position = Vector2( 0, -2.7 )
[connection signal="body_entered" from="Visibility" to="." method="_on_detection_shape_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_detection_shape_body_exited"]

[editable path="Hurtbox"]

[editable path="WeaponSlot"]

[editable path="WeaponSlot/Hitbox"]
